[workspace]
resolver = "2"
members = [ "axum-chrono-example",
    "axum-time-example"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Tim Hazlett <timhazlett2016@gmail.com>"
]

[workspace.dependencies]
axum = { version = "0.8.4", default-features = false }
axum-extra = { version = "0.10.1", default-features = false }
chrono = { version = "0.4.42", default-features = false }
clap = { version = "4.5.47", default-features = false }
cookie = { version = "0.18.1", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
hyper = { version = "1.7.0", default-features = false }
hyper-util = { version = "0.1.17", default-features = false }
itertools = { version = "0.14.0", default-features = false }
mockall = { version = "0.13.1", default-features = false }
oauth2 = { version = "5.0.0", default-features = false }
reqwest = { version = "0.12.23", default-features = false }
serde = { version = "1.0.225", default-features = false }
serde_with = { version = "3.14.0", default-features = false }
sqlx = { version = "0.8.6", default-features = false }
sqlx-cli = { version = "0.8.6", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
time = { version = "0.3.43", default-features = false }
tokio = { version = "1.47.1", default-features = false }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.6", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false }
validator = { version = "0.20.0", default-features = false }
uuid = { version = "1.18.1", default-features = false }
